Mark all canal CRDs with preserveUnknownFields: false
Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

--- a/addons/canal/canal_v3.19.yaml
+++ b/addons/canal/canal_v3.19.yaml
@@ -18,6 +18,7 @@
 #   - Add envoyagent interface to the exclusion list for Calico IP autodetection.
 #   - Add custom network policy
 #   - Flannel image bumped to v0.15.1
+#   - Add preserveUnknownFields: false to all CRDs
 
 {{ if eq .Cluster.CNIPlugin.Type "canal" }}
 {{ if eq .Cluster.CNIPlugin.Version "v3.19" }}
@@ -101,6 +102,7 @@ kind: CustomResourceDefinition
 metadata:
   name: bgpconfigurations.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: BGPConfiguration
@@ -244,6 +246,7 @@ kind: CustomResourceDefinition
 metadata:
   name: bgppeers.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: BGPPeer
@@ -352,6 +355,7 @@ kind: CustomResourceDefinition
 metadata:
   name: blockaffinities.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: BlockAffinity
@@ -413,6 +417,7 @@ kind: CustomResourceDefinition
 metadata:
   name: clusterinformations.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: ClusterInformation
@@ -477,6 +482,7 @@ kind: CustomResourceDefinition
 metadata:
   name: felixconfigurations.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: FelixConfiguration
@@ -1040,6 +1046,7 @@ kind: CustomResourceDefinition
 metadata:
   name: globalnetworkpolicies.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: GlobalNetworkPolicy
@@ -1811,6 +1818,7 @@ kind: CustomResourceDefinition
 metadata:
   name: globalnetworksets.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: GlobalNetworkSet
@@ -1864,6 +1872,7 @@ kind: CustomResourceDefinition
 metadata:
   name: hostendpoints.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: HostEndpoint
@@ -1972,6 +1981,7 @@ kind: CustomResourceDefinition
 metadata:
   name: ipamblocks.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: IPAMBlock
@@ -2053,6 +2063,7 @@ kind: CustomResourceDefinition
 metadata:
   name: ipamconfigs.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: IPAMConfig
@@ -2109,6 +2120,7 @@ kind: CustomResourceDefinition
 metadata:
   name: ipamhandles.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: IPAMHandle
@@ -2165,6 +2177,7 @@ kind: CustomResourceDefinition
 metadata:
   name: ippools.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: IPPool
@@ -2264,6 +2277,7 @@ kind: CustomResourceDefinition
 metadata:
   name: kubecontrollersconfigurations.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: KubeControllersConfiguration
@@ -2496,6 +2510,7 @@ kind: CustomResourceDefinition
 metadata:
   name: networkpolicies.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: NetworkPolicy
@@ -3248,6 +3263,7 @@ kind: CustomResourceDefinition
 metadata:
   name: networksets.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: NetworkSet
