--- a/addons/canal/canal_v3.23.yaml
+++ b/addons/canal/canal_v3.23.yaml
@@ -23,6 +23,7 @@
 #   - added envoyagent interface to the exclusion list for Calico IP autodetection
 #   - added seccomp profile to calico-kube-controllers
 #   - added custom network policy
+#   - Add preserveUnknownFields: false to all CRDs
 
 {{ if eq .Cluster.CNIPlugin.Type "canal" }}
 {{ if eq .Cluster.CNIPlugin.Version "v3.23" }}
@@ -118,6 +119,7 @@ kind: CustomResourceDefinition
 metadata:
   name: bgpconfigurations.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: BGPConfiguration
@@ -298,6 +300,7 @@ kind: CustomResourceDefinition
 metadata:
   name: bgppeers.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: BGPPeer
@@ -417,6 +420,7 @@ kind: CustomResourceDefinition
 metadata:
   name: blockaffinities.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: BlockAffinity
@@ -481,6 +485,7 @@ metadata:
   creationTimestamp: null
   name: caliconodestatuses.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: CalicoNodeStatus
@@ -741,6 +746,7 @@ kind: CustomResourceDefinition
 metadata:
   name: clusterinformations.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: ClusterInformation
@@ -805,6 +811,7 @@ kind: CustomResourceDefinition
 metadata:
   name: felixconfigurations.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: FelixConfiguration
@@ -1496,6 +1503,7 @@ kind: CustomResourceDefinition
 metadata:
   name: globalnetworkpolicies.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: GlobalNetworkPolicy
@@ -2351,6 +2359,7 @@ kind: CustomResourceDefinition
 metadata:
   name: globalnetworksets.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: GlobalNetworkSet
@@ -2404,6 +2413,7 @@ kind: CustomResourceDefinition
 metadata:
   name: hostendpoints.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: HostEndpoint
@@ -2512,6 +2522,7 @@ kind: CustomResourceDefinition
 metadata:
   name: ipamblocks.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: IPAMBlock
@@ -2631,6 +2642,7 @@ kind: CustomResourceDefinition
 metadata:
   name: ipamconfigs.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: IPAMConfig
@@ -2687,6 +2699,7 @@ kind: CustomResourceDefinition
 metadata:
   name: ipamhandles.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: IPAMHandle
@@ -2743,6 +2756,7 @@ kind: CustomResourceDefinition
 metadata:
   name: ippools.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: IPPool
@@ -2855,6 +2869,7 @@ metadata:
   creationTimestamp: null
   name: ipreservations.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: IPReservation
@@ -2906,6 +2921,7 @@ kind: CustomResourceDefinition
 metadata:
   name: kubecontrollersconfigurations.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: KubeControllersConfiguration
@@ -3159,6 +3175,7 @@ kind: CustomResourceDefinition
 metadata:
   name: networkpolicies.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: NetworkPolicy
@@ -3995,6 +4012,7 @@ kind: CustomResourceDefinition
 metadata:
   name: networksets.crd.projectcalico.org
 spec:
+  preserveUnknownFields: false
   group: crd.projectcalico.org
   names:
     kind: NetworkSet
