--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -1024,7 +1024,7 @@ spec:
                           type: boolean
                       type: object
                     konnectivityEnabled:
-                      description: KonnectivityEnabled enables konnectivity for controlplane to node network communication.
+                      description: 'Deprecated: KonnectivityEnabled enables konnectivity for controlplane to node network communication. As OpenVPN will be removed in the future KKP versions, clusters with konnectivity disabled will not be supported. All existing clusters with OpenVPN should migrate to the Konnectivity.'
                       type: boolean
                     nodeCidrMaskSizeIPv4:
                       description: NodeCIDRMaskSizeIPv4 is the mask size used to address the nodes within provided IPv4 Pods CIDR. It has to be larger than the provided IPv4 Pods CIDR. Defaults to 24.
@@ -2273,6 +2273,7 @@ spec:
                         - HealthStatusProvisioning
                       type: string
                     openvpn:
+                      description: 'Deprecated: OpenVPN will be removed entirely in the future.'
                       enum:
                         - HealthStatusDown
                         - HealthStatusUp
