Document requirement that folder structure needs to exist
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_presets.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_presets.yaml
@@ -455,7 +455,7 @@ spec:
                   description: Access data for vSphere.
                   properties:
                     basePath:
-                      description: BasePath configures a vCenter folder path that KKP will create an individual cluster folder in. If it's an absolute path, the RootPath configured in the datacenter will be ignored. If it is a relative path, the BasePath part will be appended to the RootPath to construct the full path.
+                      description: BasePath configures a vCenter folder path that KKP will create an individual cluster folder in. If it's an absolute path, the RootPath configured in the datacenter will be ignored. If it is a relative path, the BasePath part will be appended to the RootPath to construct the full path. For both cases, the full folder structure needs to exist. KKP will only try to create the cluster folder.
                       type: string
                     datacenter:
                       description: If datacenter is set, this preset is only applicable to the configured datacenter.
