--- a/hack/images/grafana-plugins/Dockerfile
+++ b/hack/images/grafana-plugins/Dockerfile
@@ -12,6 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# This image is used as an initContainer and a small shell script is run,
+# so distroless is currently not a choice.
+
 FROM docker.io/alpine:3.18
 LABEL maintainer="support@kubermatic.com"
 
