remove useless shell wrapper, cleanup more images

--- a/cmd/s3-exporter/Dockerfile
+++ b/cmd/s3-exporter/Dockerfile
@@ -16,3 +16,5 @@ FROM gcr.io/distroless/static-debian12
 LABEL maintainer="support@kubermatic.com"
 
 COPY ./s3-exporter /usr/local/bin/
+
+ENTRYPOINT ["s3-exporter"]
