--- a/hack/versions.yaml
+++ b/hack/versions.yaml
@@ -168,25 +168,21 @@ products:
       - goConstant:
           package: k8c.io/kubermatic/v2/pkg/controller/user-cluster-controller-manager/resources/resources/node-local-dns
           constant: version
-  
-  - name: cluster-backup (Velero)
+
+  - name: Velero
     source: https://github.com/vmware-tanzu/velero
     occurrences:
+      - helmChart: { directory: charts/backup/velero }
       - goConstant:
           package: k8c.io/kubermatic/v2/pkg/ee/cluster-backup/resources/seed-cluster
           constant: version
-  
-  - name: cluster-backup (Velero-plugin)
+
+  - name: Velero AWS Plugin
     source: https://github.com/vmware-tanzu/velero-plugin-for-aws
     occurrences:
       - goConstant:
           package: k8c.io/kubermatic/v2/pkg/ee/cluster-backup/resources/seed-cluster
           constant: pluginVersion
- 
-  - name: Velero
-    source: https://github.com/vmware-tanzu/velero
-    occurrences:
-      - helmChart: { directory: charts/backup/velero }
 
   - name: cert-manager
     source: https://github.com/cert-manager/cert-manager
