--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -664,6 +664,9 @@ spec:
                               availabilityZone:
                                 description: Used to configure availability zone.
                                 type: string
+                              csiCinderTopologyEnabled:
+                                description: 'Optional: configures enablement of CSI Cinder plugin for topology support. This requires Nova and Cinder to have matching availability zones configured.'
+                                type: boolean
                               dnsServers:
                                 description: Used for automatic network creation
                                 items:
