--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -712,6 +712,9 @@ spec:
                           type: string
                         applicationCredentialSecret:
                           type: string
+                        cinderTopologyEnabled:
+                          description: Flag to configure enablement of CSI Cinder plugin for topology support. This requires Nova and Cinder to have matching availability zones configured.
+                          type: boolean
                         credentialsReference:
                           description: GlobalObjectKeySelector is needed as we can not use v1.SecretKeySelector because it is not cross namespace.
                           properties:
